--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
 
     <licenses>
         <license>
-            <name></name>
-            <url></url>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
         </license>
     </licenses>
 
