--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.reactome.web.pwp</groupId>
     <artifactId>model</artifactId>
-    <version>2.2.4</version>
+    <version>2.2.5-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <parent>
@@ -81,15 +81,15 @@
         <!-- maven build and plugins -->
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <maven.deploy.version>2.8.2</maven.deploy.version>
-        <maven.gpg.version>1.5</maven.gpg.version>
-        <maven.jar.version>2.6</maven.jar.version>
-        <maven.javadoc.version>2.10.3</maven.javadoc.version>
-        <maven.release.version>2.5.3</maven.release.version>
-        <maven.source.version>2.4</maven.source.version>
+        <maven.deploy.version>3.1.3</maven.deploy.version>
+        <maven.gpg.version>3.2.7</maven.gpg.version>
+        <maven.jar.version>3.4.2</maven.jar.version>
+        <maven.javadoc.version>3.11.2</maven.javadoc.version>
+        <maven.release.version>3.3.1</maven.release.version>
+        <maven.source.version>3.3.1</maven.source.version>
         <maven.wagon.ssh.version>2.3</maven.wagon.ssh.version>
-        <maven.war.version>2.1.1</maven.war.version>
-        <nexus-staging-maven-plugin>1.6.7</nexus-staging-maven-plugin>
+        <maven.war.version>3.4.0</maven.war.version>
+        <nexus-staging-maven-plugin>1.7.0</nexus-staging-maven-plugin>
     </properties>
 
     <profiles>
